# corevpn

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
.claude/: settings.local.json
.cursor/: queue-state.json
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  docs.yml  release.yml  security.yml
crates/corevpn-auth/: Cargo.toml
crates/corevpn-auth/src/: flow.rs  lib.rs  provider.rs  session.rs  token.rs
crates/corevpn-cli/: Cargo.toml
crates/corevpn-cli/src/: client.rs  lib.rs  main.rs  ovpn.rs
crates/corevpn-config/: Cargo.toml
crates/corevpn-config/src/: client.rs  generator.rs  lib.rs  server.rs
crates/corevpn-core/: Cargo.toml
crates/corevpn-core/src/: lib.rs  network.rs  session.rs  user.rs
crates/corevpn-crypto/: Cargo.toml
crates/corevpn-crypto/benches/: crypto_benchmarks.rs
crates/corevpn-crypto/src/: cert.rs  cipher.rs  hmac_auth.rs  kdf.rs  keys.rs  lib.rs
crates/corevpn-nm/: Cargo.toml
crates/corevpn-nm/data/: nm-corevpn-service.conf  nm-corevpn-service.name  org.freedesktop.NetworkManager.corevpn.service
crates/corevpn-nm/src/: config.rs  main.rs  plugin.rs
crates/corevpn-protocol/benches/: protocol_benchmarks.rs
crates/corevpn-protocol/src/: control.rs  data.rs  lib.rs  packet.rs  reliable.rs  session.rs  tls.rs
crates/corevpn-server/: Cargo.toml
crates/corevpn-server/src/: main.rs  server.rs  setup.rs
crates/corevpn-server/src/audit/: events.rs  formats.rs  mod.rs
crates/corevpn-server/src/audit/sinks/: aws.rs  azure.rs  elasticsearch.rs  file.rs  kafka.rs  mod.rs  oracle.rs  splunk.rs  syslog.rs  webhook.rs
crates/corevpn-server/src/connection_log/: anonymizer.rs  db_logger.rs  events.rs  file_logger.rs  logger.rs  mod.rs
crates/corevpn-server/src/webui/: auth.rs  csrf.rs  mod.rs  routes.rs  state.rs  templates.rs
crates/corevpn-ui/: Cargo.toml
crates/corevpn-ui/src/: app.rs  backend.rs  config.rs  lib.rs  main.rs  state.rs  types.rs
crates/corevpn-ui/src/views/: about.rs  connection.rs  logs.rs  mod.rs  profiles.rs  server_list.rs  settings.rs
deploy/helm/corevpn/: Chart.yaml
docs/public/: llms.txt
docs/src/: index.html
plasma/: CMakeLists.txt  corevpn.cpp  corevpn.h  corevpn.ui  corevpnauth.cpp  corevpnauth.h  corevpnwidget.cpp  corevpnwidget.h  plasmanetworkmanagement_corevpnui.json
plasma/include/: settingwidget.h  vpnuiplugin.h
