[package]
name = "corevpn-auth"
description = "Authentication and authorization for CoreVPN - OAuth2, OIDC, SAML support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["authentication", "oauth2", "oidc", "saml", "vpn"]
categories = ["authentication", "network-programming"]
readme = "README.md"

[dependencies]
corevpn-crypto = { workspace = true }
corevpn-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# OAuth2/OIDC
openidconnect = { workspace = true }
oauth2 = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Secure storage
secrecy = { workspace = true }
zeroize = { workspace = true }

# Additional
sha2 = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
urlencoding = "2"
url = "2"

# JWT verification
jsonwebtoken = "9"# Email parsing
addr = "0.15"
