[package]
name = "corevpn-config"
description = "Configuration management for CoreVPN - server and client configuration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["configuration", "vpn", "settings", "toml"]
categories = ["config", "network-programming"]
readme = "README.md"

[dependencies]
corevpn-crypto = { workspace = true }
corevpn-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Networking
ipnet = { workspace = true }

# Security
secrecy = "0.10"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
