[package]
name = "corevpn-crypto"
description = "Cryptographic primitives for CoreVPN - secure key exchange, encryption, and certificate handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cryptography", "vpn", "encryption", "certificates", "security"]
categories = ["cryptography", "network-programming"]
readme = "README.md"

[dependencies]
ring = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
x509-cert = { workspace = true }
rcgen = { workspace = true }
pem = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
subtle = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto_benchmarks"
harness = false
